fix all overflow issues in workspace component page

--- a/scopes/compositions/compositions/compositions.module.scss
+++ b/scopes/compositions/compositions/compositions.module.scss
@@ -81,13 +81,11 @@ $panelBg: #fafafa;
 
 .noCompositionsPage {
   padding: 50px 40px 100px 40px;
-  width: auto;
+  width: 100%;
+  box-sizing: border-box;
   max-width: 1440px;
   margin: 0 auto;
 
-  @media screen and (max-width: 768px) {
-    width: unset;
-  }
   .title {
     margin-bottom: 24px;
     font-size: var(--h-xs);
